k8s/reactor2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor
        version: '2'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3330
---
##################################################################################################
#
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-a-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-a
        version: '2'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3331
---
##################################################################################################
#
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-b-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-b
        version: '2'
    spec:
      containers:
      - name: reviews
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3332
---
##################################################################################################
#
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-c-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-c
        version: '2'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3333
---
##################################################################################################
#
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-user-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-user
        version: '2'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3340
---
##################################################################################################
#
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-role-v2
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-role
        version: '2'
    spec:
      containers:
      - name: reviews
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3341
---
