k8s/reactor1.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactor
  labels:
    app: reactor
  namespace: reactor
spec:
  ports:
  - port: 3330
    name: http
  selector:
    app: reactor
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor
        version: '1'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3330
---
##################################################################################################
#
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: a
  labels:
    app: reactor-a
  namespace: reactor
spec:
  ports:
  - port: 3331
    name: http
  selector:
    app: reactor-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-a-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-a
        version: '1'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3331
---
##################################################################################################
#
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: b
  labels:
    app: reactor-b
  namespace: reactor
spec:
  ports:
  - port: 3332
    name: http
  selector:
    app: reactor-b
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-b-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-b
        version: '1'
    spec:
      containers:
      - name: reviews
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3332
---
##################################################################################################
#
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: c
  labels:
    app: reactor-c
  namespace: reactor
spec:
  ports:
  - port: 3333
    name: http
  selector:
    app: reactor-c
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-c-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-c
        version: '1'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3333
---
##################################################################################################
#
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: reactor-user
  namespace: reactor
spec:
  ports:
  - port: 3340
    name: http
  selector:
    app: reactor-user
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-user-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-user
        version: '1'
    spec:
      containers:
      - name: api
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3340
---
##################################################################################################
#
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: role
  labels:
    app: reactor-role
  namespace: reactor
spec:
  ports:
  - port: 3341
    name: http
  selector:
    app: reactor-role
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reactor-role-v1
  namespace: reactor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reactor-role
        version: '1'
    spec:
      containers:
      - name: reviews
        image: gcr.io/iotope-early-access/reactor:3
        imagePullPolicy: Always
        ports:
        - containerPort: 3341
---
