k8s/istio-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reactor
spec:
  hosts:
    - "treactor-asm.ioto.pe"
  gateways:
    - system/instance-gateway
  http:
    - match:
        - uri:
            prefix: /rr
      route:
        - destination:
            port:
              number: 80
            host: reactor-api
